# mqttstatus

./: .gitignore  Makefile  example.mqttstatus.yaml  mqttstatus.py  mqttstatus.service  pyproject.toml  requirements.txt
mqttstatus/: __init__.py  __main__.py  agent.py  config.py  data.py  log.py  loop.py
mqttstatus/modules/: __init__.py  base.py  notify.py  poweroff.py
share/: mqttstatus.service  mqttstatus@.service
